0x02-functions_nested_loops/100-times_table.c:
_table.c:44:2: error: expected declaration or statement at end of input
   44 |  }
      |  ^
